@@ -1,6 +1,7 @@
 sd2iec - a controller/interface adapting SD/MMC to the CBM serial bus
 Copyright (C) 2007,2008  Ingo Korb <ingo@akana.de>
 Parts based on code from others, see comments in main.c for details.
+JiffyDos send based on code by M.Kiesel
 crc7.c generated by pycrc, see comments in it for pycrc licence.
 
 Free software under GPL version 2 ONLY, see comments in main.c and
