@@ -2,6 +2,7 @@
 	- Bugfix: Recode ~/pi in both directions
 	- Bugfix: Fastloaders now work on LarsP-style hardware too
 	- Disk change key support
+	- Full JiffyDos support
 
 2007-12-25 - release 0.4.2
 	- Bugfix: LarsP-style hardware actually works now
